--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gsap/react": "^2.1.2",
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
+    "framer-motion": "^12.5.0",
     "gsap": "^3.12.7",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
