--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/barlow": "^5.2.5",
+    "@fontsource/jersey-25": "^5.2.5",
+    "@fontsource/kanit": "^5.2.5",
     "@gsap/react": "^2.1.2",
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
