--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@gsap/react": "^2.1.2",
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "framer-motion": "^12.5.0",
     "gsap": "^3.12.7",
+    "jest": "^29.7.0",
     "lenis": "^1.2.3",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
